# github-proxy

./: .pre-commit-config.yaml  Makefile  README.md  env.sh  example.py  pyproject.toml
.circleci/: config.yml
docs/architecture/: sequence-diagrams.md
github_proxy/: __init__.py  config.py  dependencies.py  github_credentials.py  github_tokens.py  proxy.py  ratelimit.py  telemetry.py  views.py
github_proxy/cache/: __init__.py  backend.py  inmemory.py  redis.py
tests/integration/: conftest.py  test_views.py  vcr.py
tests/integration/fixtures/: clients.example.yml.j2
tests/integration/fixtures/cassettes/: test_caching_proxy_view_returns_cached_response.yaml  test_caching_proxy_view_returns_uncached_response.yaml  test_caching_proxy_view_uses_query_string_when_indexing_cache.yaml  test_proxy_view_mutation_requests.yaml  test_read_only_client_is_not_authorized_to_mutate_resources.yaml
tests/unit/: conftest.py  test_config.py  test_github_credentials.py  test_github_tokens.py  test_proxy.py  test_ratelimit.py
