[tool.poetry]
name = "github-proxy"
version = "0.4.3"
description = "A minimal caching proxy to GitHub's REST & GraphQL APIs"
authors = ["Babylon Health <developer-experience@babylonhealth.com>"]
repository = "https://github.com/babylonhealth/github-proxy"
readme = "README.md"
keywords = ["GitHub", "API", "proxy"]
include = ["github_proxy/py.typed"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Topic :: Internet :: WWW/HTTP :: WSGI :: Application",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Framework :: Flask",
    "Natural Language :: English",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
]

[tool.poetry.dependencies]
python = "^3.9"
Werkzeug = "^2.1.2"
PyGithub = "^1.55"
PyYAML = "^6.0"
requests = "^2.27.1"
dacite = "^1.6.0"
cachetools = "^5.0.0"

redis = { version = ">=3.5.3<5.0.0", optional = true }
flask = { version = "^2.0.3", optional = true }
Flask-HTTPAuth = { version = "^4.5.0", optional = true }

[tool.poetry.extras]
redis = ["redis"]
flask = ["flask", "Flask-HTTPAuth"]

[tool.poetry.dev-dependencies]
mypy = "^0.931"
black = "^22.1.0"
flake8 = "^4.0.1"
isort = "^5.10.1"
types-requests = "^2.27.11"
types-cachetools = "^4.2.9"
types-redis = ">=3.5.3<5.0.0"
pre-commit = "^2.17.0"
pytest = "^7.0.1"
pytest-cov = "^3.0.0"
pytest-mypy = "^0.9.1"
Faker = "^13.3.0"
requests-mock = "^1.9.3"
vcrpy = "^4.1.1"
trustme = "^0.9.0"
types-PyYAML = "^6.0.7"

[build-system]
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
preview=true

[tool.isort]
profile = "black"
line_length = 88
multi_line_output = 5
length_sort = "false"
known_first_party = "github_proxy,tests"
default_section = "THIRDPARTY"
sections = "FUTURE,STDLIB,THIRDPARTY,FIRSTPARTY,LOCALFOLDER"
force_single_line = "true"

[tool.poetry-dynamic-versioning]
enable = true
vcs = "git"
style = "pep440"

[[tool.poetry.source]]
name = 'babylon'
url = "https://artifactory.ops.babylontech.co.uk/artifactory/api/pypi/babylon-pypi/simple"
